--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   </style>
 </head>
 <body>
+<main>
 
   <div class="container">
     <div class="content">
@@ -49,5 +50,8 @@
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
   </div>
+
+</main>
+  
 </body>
 </html>
